--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "Hello World",
-    "description": "Ths is my 1st extenshion",
+    "name": "TC to MS Test Playlist",
+    "description": "Chrome extension to download a MS Test Playlist file built from the failed tests from TeamCity",
     "version":"1.0",
 
     "browser_action":{
