--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,13 @@
     "description": "Chrome extension to download a MS Test Playlist file built from the failed tests from TeamCity",
     "version":"1.0",
 
-    "browser_action":{
+    "page_action":{
         "default_icon":"icon.png",
         "default_popup":"popup.html"
+    },
+
+    "background": {
+        "scripts":["eventPage.js"],
+        "persistent":false
     }
 }
