add tc background page and move filsaver.js

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,20 @@
     },
 
     "background": {
-        "scripts":["eventPage.js"],
+        "scripts":["jquery-1.10.2.min.js","eventPage.js"],
         "persistent":false
-    }
+    },
+
+    "content_scripts":[
+        {
+            //"matches":["http://*/viewLog.html\\?buildId=*&tab=buildResultsDiv&buildTypeId=*"],
+            "matches": ["http://maltcs1.corp.flp/*"],
+            "js":["jquery-1.10.2.min.js","FileSaver.js","tcPage.js"]
+        }
+    ],
+
+    "permissions":[
+        "tabs",
+        "http://maltcs1.corp.flp/*"
+    ]
 }
