--- a/manifest.json
+++ b/manifest.json
@@ -5,24 +5,23 @@
     "version":"1.0.1",
 
     "page_action":{
-        "default_icon":"icon.png",
-        "default_popup":"popup.html"
+        "default_icon":"app/icon.png",
+        "default_popup":"app/popup.html"
     },
 
     "background": {
-        "scripts":["jquery-1.10.2.min.js", "eventPage.js"],
+        "scripts":["lib/jquery-1.10.2.min.js", "app/background.js"],
         "persistent":false
     },
 
-    "content_scripts":[
-    {
+    "content_scripts":[{
+
             "matches":["http://*/viewLog.html?buildId=*&tab=buildResultsDiv&buildTypeId=*"],
-            "js":["jquery-1.10.2.min.js", "underscore.js", "underscore.string.js", "FileSaver.js","tcPage.js"]
-        }
-    ],
+            "js":["lib/jquery-1.10.2.min.js", "lib/underscore.js", "lib/underscore.string.js", "lib/FileSaver.js","app/tcPage.js"]
+    }],
 
     "permissions":[
-        "tabs",
-        "http://maltcs1.corp.flp/*"
+        "tabs"
+        //"http://maltcs1.corp.flp/*"
     ]
 }
